add system scss loader

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,8 +1,17 @@
-<div role="main">
-  <div class="container">
-    <div class="row">
-      <div class="columns border large-12 medium-11 small-11 small-centered">
+<div class="container">
+  <div id="content">
+    <!-- heading -->
+    <div id="heading" class="row">
+      <h1 class="title">ng-2048</h1>
+      <div class="scores-container">
       </div>
     </div>
+
+    <!-- instructions -->
+    <div id="instructions" class="row">
+      Join the numbers and get to the <strong>2048</strong> tile!
+    </div>
+
+    <div id="game-container"></div>
   </div>
 </div>
