--- a/app/app.component.html
+++ b/app/app.component.html
@@ -15,6 +15,8 @@
       <button (click)="newGame()" class="restart-button">New game</button>
     </div>
 
-    <div id="game-container"></div>
+    <div id="game-container">
+      <grid [size]="game.gameSize" [grid]="game.grid"></grid>
+    </div>
   </div>
 </div>
