--- a/app/app.component.html
+++ b/app/app.component.html
@@ -16,7 +16,7 @@
     </div>
 
     <div id="game-container">
-      <grid [size]="game.gameSize" [grid]="game.grid"></grid>
+      <grid [size]="game.gameSize" [grid]="game.grid" [tiles]="game.tiles"></grid>
     </div>
   </div>
 </div>
