--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,37 +1,26 @@
-@import '../node_modules/bootstrap-sass/assets/stylesheets/bootstrap.scss';
-@import 'functions';
+@import "helpers";
+@import "fonts/clear-sans";
 
-$width: 400px;
-$min-tile-count: 3;
-$max-tile-count: 6;
-$tile-padding: 15px;
-$tile-radius: 3px;
-$tile-font: 'Open Sans', sans-serif;
-$colors:  #EEE4DA, // 2
-          #EAE0C8, // 4
-          #F59563, // 8
-          #3399ff, // 16
-          #ffa333, // 32
-          #cef030, // 64
-          #E8D8CE, // 128
-          #990303, // 256
-          #6BA5DE, // 512
-          #DCAD60, // 1024
-          #B60022; // 2048
 
-$game-container-background: #bbada0;
-$tile-color: #eee4da;
-$tile-gold-color: #edc22e;
-$tile-gold-glow-color: lighten($tile-gold-color, 15%);
+$field-width: 500px;
+$grid-spacing: 15px;
+$grid-row-cells: 4;
+$tile-size: ($field-width - $grid-spacing * ($grid-row-cells + 1)) / $grid-row-cells;
+$tile-border-radius: 3px;
+
+$mobile-threshold: $field-width + 20px;
+
 $text-color: #776E65;
 $bright-text-color: #f9f6f2;
 
-// DON'T EDIT BELOW
-$transition-time: 170ms;
+$tile-color: #eee4da;
+$tile-gold-color: #edc22e;
+$tile-gold-glow-color: lighten($tile-gold-color, 15%);
 
-.container {
-  max-width: 600px;
-}
+$game-container-margin-top: 40px;
+$game-container-background: #bbada0;
+
+$transition-speed: 100ms;
 
 html, body {
   margin: 0;
@@ -39,74 +28,53 @@ html, body {
 
   background: #faf8ef;
   color: $text-color;
-  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px;
 }
 
-p {
-   margin-top: 0;
-   margin-bottom: 10px;
-   line-height: 1.65;
-   display: block;
-   -webkit-margin-before: 1em;
-   -webkit-margin-after: 1em;
-   -webkit-margin-start: 0px;
-   -webkit-margin-end: 0px;
+body {
+  margin: 80px 0;
 }
 
-a {
-  color: $text-color;
-  font-weight: bold;
-  text-decoration: underline;
-  cursor: pointer;
-  &:hover {
-    color: darken($text-color, 5%);
-  }
-}
-
-strong {
-  &.important {
-    text-transform: uppercase;
-  }
-}
-
-hr {
-  border: none;
-  border-bottom: 1px solid lighten($text-color, 40%);
-  margin-top: 20px;
-  margin-bottom: 30px;
-}
-
-#heading {
-   margin-top: 4em;
+.heading {
+  @include clearfix;
 }
 
 h1.title {
-   font-size: 80px;
-   font-weight: bold;
-   margin: 0;
-   display: block;
-   float: left;
+  font-size: 80px;
+  font-weight: bold;
+  margin: 0;
+  display: block;
+  float: left;
+}
+
+@include keyframes(move-up) {
+  0% {
+    top: 25px;
+    opacity: 1;
+  }
+
+  100% {
+    top: -50px;
+    opacity: 0;
+  }
 }
 
 .scores-container {
-  text-align: right;
   float: right;
+  text-align: right;
 }
 
 .score-container, .best-container {
-  $inner-height: 25px;
-
-  min-height: 2.5em;
-  min-width: 5em;
+  $height: 25px;
 
   position: relative;
   display: inline-block;
   background: $game-container-background;
   padding: 15px 25px;
-  font-size: $inner-height;
-  height: $inner-height;
-  line-height: $inner-height + 22px;
+  font-size: $height;
+  height: $height;
+  line-height: $height + 22px;
   font-weight: bold;
   border-radius: 3px;
   color: white;
@@ -129,8 +97,8 @@ h1.title {
     position: absolute;
     right: 30px;
     color: red;
-    font-size: $inner-height;
-    line-height: $inner-height;
+    font-size: $height;
+    line-height: $height;
     font-weight: bold;
     color: rgba($text-color, .9);
     z-index: 100;
@@ -147,192 +115,304 @@ h1.title {
   content: "Best"
 }
 
-#instructions {
-   padding-top: 0.5em;
-
-   .restart-button {
-      margin-top: -0.5em; /* hack */
-   }
+p {
+  margin-top: 0;
+  margin-bottom: 10px;
+  line-height: 1.65;
 }
 
-.restart-button {
-   display: inline-block;
-   background: #8f7a66;
-   border-radius: 3px;
-   padding: 0 20px;
-   text-decoration: none;
-   color: #f9f6f2;
-   height: 40px;
-   line-height: 42px;
-   cursor: pointer;
-   display: block;
-   text-align: center;
-   float: right;
-   border: none;
-}
-
-#content {
-   
-}
-
-#game-container {
-   position: relative;
-   width: $width;
-   height: $width;
-   margin: 40px auto;
-}
-
-.game-overlay {
-  width: $width;
-  height: $width;
-  background-color: rgba(255, 255, 255, 0.47);
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  text-align: center;
-  padding-top: 35%;
-  font-size: 3em;
+a {
+  color: $text-color;
   font-weight: bold;
-  overflow: hidden;
-  box-sizing: border-box;
-  
-  &.ng-enter {
-    @include transition(all 1000ms ease-in);
-    @include transform(translate(0, 100%));
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+strong {
+  &.important {
+    text-transform: uppercase;
+  }
+}
+
+hr {
+  border: none;
+  border-bottom: 1px solid lighten($text-color, 40%);
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.container {
+  width: $field-width;
+  margin: 0 auto;
+}
+
+@include keyframes(fade-in) {
+  0% {
     opacity: 0;
   }
 
-  &.ng-enter-active {
-    @include transform(translate(0, 0));
+  100% {
     opacity: 1;
-  }
-
-  .lower {
-    display: block;
-    margin-top: 29px;
-    font-size: 16px;
-
-    a {
-       display: inline-block;
-       background: #8f7a66;
-       border-radius: 3px;
-       padding: 0 20px;
-       text-decoration: none;
-       color: #f9f6f2;
-       height: 40px;
-       line-height: 42px;
-       cursor: pointer;
-       margin-left: 9px;
-    }
   }
 }
 
-@mixin game-board($tile-count: 4) {
-  $tile-size: ($width - $tile-padding * ($tile-count + 1)) / $tile-count;
-  #game-#{$tile-count} { 
+// Styles for buttons
+@mixin button {
+  display: inline-block;
+  background: darken($game-container-background, 20%);
+  border-radius: 3px;
+  padding: 0 20px;
+  text-decoration: none;
+  color: $bright-text-color;
+  height: 40px;
+  line-height: 42px;
+}
+
+// Game field mixin used to render CSS at different width
+@mixin game-field {
+  .game-container {
+    margin-top: $game-container-margin-top;
     position: relative;
-    padding: $tile-padding;
+    padding: $grid-spacing;
+
     cursor: default;
-    background: #bbaaa0;
-    border-radius: 6px;
-    width: $width;
-    height: $width;
+    -webkit-touch-callout: none;
+    -ms-touch-callout: none;
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+
+    -ms-touch-action: none;
+    touch-action: none;
+
+    background: $game-container-background;
+    border-radius: $tile-border-radius * 2;
+    width: $field-width;
+    height: $field-width;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 
-    .grid-container {
-      position: absolute;
-      z-index: 1;
-      margin: 0 auto;
+    .game-message {
+      display: none;
 
-      .grid-cell {
-        width: $tile-size;
-        height: $tile-size;
-        margin-bottom: $tile-padding;
-        margin-right: $tile-padding;
-        float: left;
-        @include border-radius($tile-radius);
-        background: rgba(238, 228, 218, 0.35);
-        &:last-child {
-          margin-right: 0
-        }
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background: rgba($tile-color, .5);
+      z-index: 100;
+
+      text-align: center;
+
+      p {
+        font-size: 60px;
+        font-weight: bold;
+        height: 60px;
+        line-height: 60px;
+        margin-top: 222px;
+        // height: $field-width;
+        // line-height: $field-width;
+      }
+
+      .lower {
+        display: block;
+        margin-top: 59px;
+      }
+
+      a {
+        @include button;
+        margin-left: 9px;
+        // margin-top: 59px;
+
+	&.keep-playing-button {
+	  display: none;
+	}
+      }
+
+      @include animation(fade-in 800ms ease $transition-speed * 12);
+      @include animation-fill-mode(both);
+
+      &.game-won {
+        background: rgba($tile-gold-color, .5);
+        color: $bright-text-color;
+
+	a.keep-playing-button {
+	  display: inline-block;
+	}
+      }
+
+      &.game-won, &.game-over {
+        display: block;
       }
     }
+  }
 
-    .tile-container {
-      position: absolute;
-      z-index: 2;
+  .grid-container {
+    position: absolute;
+    z-index: 1;
+  }
 
-      .unstyled-tile {
-        font-family: $tile-font;
-        position: absolute;
-        width: $tile-size;
-        height: $tile-size;
-        background: white;
-        margin: 0 auto;
-        font-size: 2em;
-        text-align: center;
-        font-weight: bold;
-        z-index: 10;
-        font-size: 2.5em;
-        line-height: ($width/$tile-count) - $tile-padding;
-      }
-      .tile {
-        font-family: $tile-font;
-        position: absolute;
-        width: $tile-size;
-        height: $tile-size;
-        @include border-radius($tile-radius);
-        @include transition($transition-time ease-in-out);
-        // @include transition-property(transform);
-        -webkit-transition-property: -webkit-transform;
-        -moz-transition-property: -moz-transform;
-        transition-property: transform;
-        z-index: 2;
+  .grid-row {
+    margin-bottom: $grid-spacing;
 
-        &.tile-merged .tile-inner {
-          @include animation(pop 200ms ease-in);
-        }
+    &:last-child {
+      margin-bottom: 0;
+    }
 
-        @for $x from 1 through $tile-count {
-          @for $y from 1 through $tile-count {
-            $zeroOffsetX: $x - 1;
-            $zeroOffsetY: $y - 1;
-            $newX: ($tile-size) * ($zeroOffsetX) + ($tile-padding * $zeroOffsetX);
-            $newY: ($tile-size) * ($zeroOffsetY) + ($tile-padding * $zeroOffsetY);
+    &:after {
+      content: "";
+      display: block;
+      clear: both;
+    }
+  }
 
-            &.position-#{$zeroOffsetX}-#{$zeroOffsetY} { 
-              @include transform(translate($newX, $newY));
-            }
-          }
-        }
+  .grid-cell {
+    width: $tile-size;
+    height: $tile-size;
+    margin-right: $grid-spacing;
+    float: left;
 
-        @for $i from 1 through length($colors) {
-          &.tile-#{power(2, $i)} .tile-inner {
-            background: nth($colors, $i)
-          }
-        }
-        &:last-child {
-          margin-right: 0
-        }
+    border-radius: $tile-border-radius;
 
-        .tile-inner {
-          line-height: ($width/$tile-count) - $tile-padding;
+    background: rgba($tile-color, .35);
 
-          text-align: center;
-          font-weight: bold;
-          z-index: 10;
-          font-size: 2.5em;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  .tile-container {
+    position: absolute;
+    z-index: 2;
+  }
+
+  .tile {
+    &, .tile-inner {
+      width: ceil($tile-size);
+      height: ceil($tile-size);
+      line-height: ceil($tile-size);
+    }
+
+    // Build position classes
+    @for $x from 1 through $grid-row-cells {
+      @for $y from 1 through $grid-row-cells {
+        &.tile-position-#{$x}-#{$y} {
+          $xPos: floor(($tile-size + $grid-spacing) * ($x - 1));
+          $yPos: floor(($tile-size + $grid-spacing) * ($y - 1));
+          @include transform(translate($xPos, $yPos));
         }
       }
     }
   }
 }
 
-@for $i from $min-tile-count through $max-tile-count {
-  @include game-board($i);
+// End of game-field mixin
+@include game-field;
+
+.tile {
+  position: absolute; // Makes transforms relative to the top-left corner
+
+  .tile-inner {
+    border-radius: $tile-border-radius;
+
+    background: $tile-color;
+    text-align: center;
+    font-weight: bold;
+    z-index: 10;
+
+    font-size: 55px;
+  }
+
+  // Movement transition
+  @include transition($transition-speed ease-in-out);
+  -webkit-transition-property: -webkit-transform;
+  -moz-transition-property: -moz-transform;
+  transition-property: transform;
+
+  $base: 2;
+  $exponent: 1;
+  $limit: 11;
+
+  // Colors for all 11 states, false = no special color
+  $special-colors: false false, // 2
+                   false false, // 4
+                   #f78e48 true, // 8
+                   #fc5e2e true, // 16
+                   #ff3333 true, // 32
+                   #ff0000 true, // 64
+                   false true, // 128
+                   false true, // 256
+                   false true, // 512
+                   false true, // 1024
+                   false true; // 2048
+
+  // Build tile colors
+  @while $exponent <= $limit {
+    $power: pow($base, $exponent);
+
+    &.tile-#{$power} .tile-inner {
+      // Calculate base background color
+      $gold-percent: ($exponent - 1) / ($limit - 1) * 100;
+      $mixed-background: mix($tile-gold-color, $tile-color, $gold-percent);
+
+      $nth-color: nth($special-colors, $exponent);
+
+      $special-background: nth($nth-color, 1);
+      $bright-color: nth($nth-color, 2);
+
+      @if $special-background {
+        $mixed-background: mix($special-background, $mixed-background, 55%);
+      }
+
+      @if $bright-color {
+        color: $bright-text-color;
+      }
+
+      // Set background
+      background: $mixed-background;
+
+      // Add glow
+      $glow-opacity: max($exponent - 4, 0) / ($limit - 4);
+
+      @if not $special-background {
+        box-shadow: 0 0 30px 10px rgba($tile-gold-glow-color, $glow-opacity / 1.8),
+                    inset 0 0 0 1px rgba(white, $glow-opacity / 3);
+      }
+
+      // Adjust font size for bigger numbers
+      @if $power >= 100 and $power < 1000 {
+        font-size: 45px;
+
+        // Media queries placed here to avoid carrying over the rest of the logic
+        @include smaller($mobile-threshold) {
+          font-size: 25px;
+        }
+      } @else if $power >= 1000 {
+        font-size: 35px;
+
+        @include smaller($mobile-threshold) {
+          font-size: 15px;
+        }
+      }
+    }
+
+    $exponent: $exponent + 1;
+  }
+
+  // Super tiles (above 2048)
+  &.tile-super .tile-inner {
+    color: $bright-text-color;
+    background: mix(#333, $tile-gold-color, 95%);
+
+    font-size: 30px;
+
+    @include smaller($mobile-threshold) {
+      font-size: 10px;
+    }
+  }
 }
 
 @include keyframes(appear) {
@@ -340,27 +420,131 @@ h1.title {
     opacity: 0;
     @include transform(scale(0));
   }
-  50% {
-    opacity: 1;
-    @include transform(scale(1.2));
-  }
+
   100% {
     opacity: 1;
     @include transform(scale(1));
-  } 
+  }
+}
+
+.tile-new .tile-inner {
+  @include animation(appear 200ms ease $transition-speed);
+  @include animation-fill-mode(backwards);
 }
 
 @include keyframes(pop) {
   0% {
-    opacity: 1;
-    @include transform(scale(1));
+    @include transform(scale(0));
   }
+
   50% {
-    // opacity: 0;
     @include transform(scale(1.2));
   }
+
   100% {
-    opacity: 0;
     @include transform(scale(1));
+  }
+}
+
+.tile-merged .tile-inner {
+  z-index: 20;
+  @include animation(pop 200ms ease $transition-speed);
+  @include animation-fill-mode(backwards);
+}
+
+.above-game {
+  @include clearfix;
+}
+
+.game-intro {
+  float: left;
+  line-height: 42px;
+  margin-bottom: 0;
+}
+
+.restart-button {
+  @include button;
+  display: block;
+  text-align: center;
+  float: right;
+}
+
+.game-explanation {
+  margin-top: 50px;
+}
+
+@include smaller($mobile-threshold) {
+  // Redefine variables for smaller screens
+  $field-width: 280px;
+  $grid-spacing: 10px;
+  $grid-row-cells: 4;
+  $tile-size: ($field-width - $grid-spacing * ($grid-row-cells + 1)) / $grid-row-cells;
+  $tile-border-radius: 3px;
+  $game-container-margin-top: 17px;
+
+  html, body {
+    font-size: 15px;
+  }
+
+  body {
+    margin: 20px 0;
+    padding: 0 20px;
+  }
+
+  h1.title {
+    font-size: 27px;
+    margin-top: 15px;
+  }
+
+  .container {
+    width: $field-width;
+    margin: 0 auto;
+  }
+
+  .score-container, .best-container {
+    margin-top: 0;
+    padding: 15px 10px;
+    min-width: 40px;
+  }
+
+  .heading {
+    margin-bottom: 10px;
+  }
+
+  // Show intro and restart button side by side
+  .game-intro {
+    width: 55%;
+    display: block;
+    box-sizing: border-box;
+    line-height: 1.65;
+  }
+
+  .restart-button {
+    width: 42%;
+    padding: 0;
+    display: block;
+    box-sizing: border-box;
+    margin-top: 2px;
+  }
+
+  // Render the game field at the right width
+  @include game-field;
+
+  // Rest of the font-size adjustments in the tile class
+  .tile .tile-inner {
+    font-size: 35px;
+  }
+
+  .game-message {
+    p {
+      font-size: 30px !important;
+      height: 30px !important;
+      line-height: 30px !important;
+      margin-top: 90px !important;
+    }
+
+    .lower {
+      margin-top: 30px !important;
+    }
   }
 }
