bug: fix highest tile score tracking

--- a/app/assets/main.scss
+++ b/app/assets/main.scss
@@ -273,6 +273,7 @@ hr {
     width: $tile-size;
     height: $tile-size;
     margin-right: $grid-spacing;
+    margin-bottom: $grid-spacing;
     float: left;
 
     border-radius: $tile-border-radius;
