--- a/app/components/grid/grid.component.html
+++ b/app/components/grid/grid.component.html
@@ -1,14 +1,3 @@
 <div class="grid-container">
-  <div class="grid-row">
-    <tile class="grid-cell" [tile]="tile" *ngFor="let tile of tiles.slice(0, 4)"></tile>
-  </div>
-  <div class="grid-row">
-    <tile class="grid-cell" [tile]="tile" *ngFor="let tile of tiles.slice(4, 8)"></tile>
-  </div>
-  <div class="grid-row">
-    <tile class="grid-cell" [tile]="tile" *ngFor="let tile of tiles.slice(8, 12)"></tile>
-  </div>
-  <div class="grid-row">
-    <tile class="grid-cell" [tile]="tile" *ngFor="let tile of tiles.slice(12, 16)"></tile>
-  </div>
+  <tile class="grid-cell" [tile]="tile" *ngFor="let tile of tiles"></tile>
 </div>
