--- a/assets/main.css
+++ b/assets/main.css
@@ -238,6 +238,7 @@ hr {
   width: 106.25px;
   height: 106.25px;
   margin-right: 15px;
+  margin-bottom: 15px;
   float: left;
   border-radius: 3px;
   background: rgba(238, 228, 218, 0.35); }
@@ -673,6 +674,7 @@ hr {
     width: 106.25px;
     height: 106.25px;
     margin-right: 15px;
+    margin-bottom: 15px;
     float: left;
     border-radius: 3px;
     background: rgba(238, 228, 218, 0.35); }
